--- a/Teamply/Teamply/Screen/Box/InProgressTab.storyboard
+++ b/Teamply/Teamply/Screen/Box/InProgressTab.storyboard
@@ -58,24 +58,32 @@
                                     <constraint firstAttribute="bottom" secondItem="CQV-eQ-7MB" secondAttribute="bottom" id="suI-6v-9b3"/>
                                 </constraints>
                             </view>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M9G-w1-HvW">
-                                <rect key="frame" x="0.0" y="183" width="393" height="635"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M9G-w1-HvW">
+                                <rect key="frame" x="0.0" y="192" width="393" height="626"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="whE-vo-L24">
+                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="whE-vo-L24">
                                         <rect key="frame" x="0.0" y="0.0" width="393" height="634"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" name="gray0"/>
                                     </stackView>
                                 </subviews>
-                                <viewLayoutGuide key="contentLayoutGuide" id="Q7U-V8-ntt"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="sgW-rR-wfi"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="whE-vo-L24" secondAttribute="bottom" priority="250" id="5Xa-3A-Rgo"/>
+                                    <constraint firstItem="whE-vo-L24" firstAttribute="width" secondItem="M9G-w1-HvW" secondAttribute="width" id="72y-PQ-3AJ"/>
+                                    <constraint firstItem="whE-vo-L24" firstAttribute="leading" secondItem="M9G-w1-HvW" secondAttribute="leading" id="adu-Uz-Cza"/>
+                                    <constraint firstItem="whE-vo-L24" firstAttribute="top" secondItem="M9G-w1-HvW" secondAttribute="top" id="o4h-7Q-GBX"/>
+                                    <constraint firstAttribute="trailing" secondItem="whE-vo-L24" secondAttribute="trailing" id="obS-Sx-WoO"/>
+                                </constraints>
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="M9G-w1-HvW" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="7aI-a0-FCz"/>
+                            <constraint firstItem="M9G-w1-HvW" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="C8s-Vw-3dN"/>
+                            <constraint firstItem="M9G-w1-HvW" firstAttribute="width" secondItem="5EZ-qb-Rvc" secondAttribute="width" id="EBx-DU-eHQ"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="MBn-X3-0hw" secondAttribute="trailing" id="KgN-XP-Pve"/>
+                            <constraint firstItem="M9G-w1-HvW" firstAttribute="top" secondItem="MBn-X3-0hw" secondAttribute="bottom" id="MJb-SP-y8h"/>
+                            <constraint firstItem="M9G-w1-HvW" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="Ney-OD-5cg"/>
                             <constraint firstItem="MBn-X3-0hw" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="QTa-dT-n1J"/>
                             <constraint firstItem="MBn-X3-0hw" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="71" id="wMP-hW-43H"/>
                         </constraints>
