[Feat] 마이페이지에서 화면 전환 #31

--- a/Teamply/Teamply/Screen/MyPage/MyInformationManagement/MyInformation.storyboard
+++ b/Teamply/Teamply/Screen/MyPage/MyInformationManagement/MyInformation.storyboard
@@ -12,7 +12,7 @@
         <!--My Information View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="MyInformation" id="Y6W-OH-hqX" customClass="MyInformationViewController" customModule="Teamply" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MyInformationVC" id="Y6W-OH-hqX" customClass="MyInformationViewController" customModule="Teamply" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
