--- a/Teamply/Teamply/Screen/MyPage/MyInformationManagement/MyInformation.storyboard
+++ b/Teamply/Teamply/Screen/MyPage/MyInformationManagement/MyInformation.storyboard
@@ -31,7 +31,7 @@
                                 <rect key="frame" x="0.0" y="110" width="393" height="708"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="xEI-u4-AdC">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="604"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="654"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5kV-uD-mQy">
                                                 <rect key="frame" x="0.0" y="0.0" width="393" height="190"/>
@@ -104,23 +104,23 @@
                                                 </constraints>
                                             </view>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2Mr-89-wGG">
-                                                <rect key="frame" x="0.0" y="312" width="393" height="100"/>
+                                                <rect key="frame" x="0.0" y="312" width="393" height="150"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="100" id="stE-bj-RCb"/>
+                                                    <constraint firstAttribute="height" constant="150" id="irP-GB-kJd"/>
                                                 </constraints>
-                                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="TgQ-rl-PW2">
-                                                    <size key="itemSize" width="116" height="100"/>
+                                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="TgQ-rl-PW2">
+                                                    <size key="itemSize" width="153" height="55"/>
                                                     <size key="headerReferenceSize" width="50" height="50"/>
                                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                 </collectionViewFlowLayout>
                                                 <cells>
                                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TendencyCell" id="c43-gh-Kb0" customClass="TendencyCollectionViewCell" customModule="Teamply" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="50" width="116" height="100"/>
+                                                        <rect key="frame" x="0.0" y="50" width="153" height="55"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="qAU-8w-QIB" customClass="TendencyCollectionViewCell" customModule="Teamply" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="0.0" width="116" height="100"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="153" height="55"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GXn-XX-bIq">
@@ -132,7 +132,7 @@
                                                                 </label>
                                                             </subviews>
                                                         </collectionViewCellContentView>
-                                                        <size key="customSize" width="116" height="100"/>
+                                                        <size key="customSize" width="153" height="55"/>
                                                         <connections>
                                                             <outlet property="tendencyLabel" destination="GXn-XX-bIq" id="rsz-26-uM1"/>
                                                         </connections>
@@ -144,7 +144,7 @@
                                                 </collectionReusableView>
                                             </collectionView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fi3-EY-8zH">
-                                                <rect key="frame" x="0.0" y="417" width="393" height="187"/>
+                                                <rect key="frame" x="0.0" y="467" width="393" height="187"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fyf-6B-JZD">
                                                         <rect key="frame" x="25.000000000000004" y="30" width="41.333333333333343" height="23"/>
